# system-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/system_monitor/: alerts.py  display.py  main.py  monitor.py  storage.py
